# librigidbodytracker

./: .gitignore  1.yaml  CMakeLists.txt  README.md
.data/graph_output/: graph_*.yaml
.github/workflows/: cmake.yml
example/: 2d_7m.yaml  2d_7m_fake.yaml  3d_8m.yaml  3d_8m_hand.yaml  3d_8m_ori.yaml  figure8_2d_5m1.yaml  figure8_3d_8m1.yaml  figure8_3d_8m2.yaml  figure8_4d_9m3f.yaml  figure8_4d_9m5.yaml  figure8_4d_9m7.yaml  input.txt  input1.txt  input2.txt  input_wrong.txt  input_wrong2.txt  input_wrong3.txt  multi_marker.yaml  reentry_single.yaml
example/030225/: 2d_8m.yaml  4d_10m.yaml  4d_16m.yaml  4d_4m.yaml  8d_20m.yaml  8d_22m2.yaml
example/yaml_output/: 1.yaml  2.yaml  oldclass_output.yaml  runtime.txt  wrong.yaml  wrong2.yaml  wrong3.yaml
script/: assignment.cpp  average_runtime_cbs.py  cbs.sh  cbs_assignment.hpp  cbs_group_constraint.hpp  cbs_group_constraint_old.cpp  cbs_reference.cpp  cbs_reference.hpp  cbs_test.sh  data_gen.py  data_gurobi_cbs_evaluation.sh  evaluation.py  evaluation.sh  folder_copy.py  generate_data.sh  graph_assignment.sh  graph_cbs.sh  group_constraint.py  gurobi.py  gurobi.sh  gurobi_group_constraint.py  input_group.txt  input_group3.txt  random_data_generator.py  single_marker_mode.py
src/: assignment.cpp  assignment.hpp  assignment2.cpp  assignment_group_constraint.hpp  cbs.hpp  cbs_assignment.hpp  cbs_group_constraint.cpp  cbs_group_constraint.hpp  cbs_group_constraint_notations.cpp  cbs_group_constraint_old.cpp  graph_cbs.sh  graph_cbs_batch.sh  graph_cbs_rd1.sh  playclouds.cpp  rigid_body_tracker.cpp
(+31 files in other folders)
